@@ -1,6 +1,7 @@
 CHANGELOG
 
 1.5.12
+* introduction of UTILS help.html (utils/doc/help.html)
 
 utils:
 rules-edit: action 'exportToExcel' new fields 'dst_negated' and 'src_negated' to show when some fields are negated
